// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestsOfflineScreen should render default values 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <QuestsScreenOffline
    fitkitAvailable={true}
    onLeftMenuPress={[MockFunction]}
    theme={
      Object {
        "image": "desert",
        "navBarType": "dark",
      }
    }
    totalCoins={500}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={1}
            style={
              Object {
                "height": 1334,
                "width": 750,
              }
            }
          />
        </View>,
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View>
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 70,
                  "marginBottom": 20,
                }
              }
            >
              you’re offline
            </YuText>
          </View>
          <YuText>
            Check your internet connection.
          </YuText>
          <Pad
            height={60}
          />
        </View>,
        <TopBar
          coins={500}
          onPressLeftIcon={[MockFunction]}
        />,
        <NavBar
          activeIndex={1}
          hasNotification={false}
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "height": "100%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Image
            resizeMode="cover"
            source={1}
            style={
              Object {
                "height": 1334,
                "width": 750,
              }
            }
          />,
          "style": Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "resizeMode": "cover",
            "source": 1,
            "style": Object {
              "height": 1334,
              "width": 750,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View>
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 70,
                    "marginBottom": 20,
                  }
                }
              >
                you’re offline
              </YuText>
            </View>,
            <YuText>
              Check your internet connection.
            </YuText>,
            <Pad
              height={60}
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 70,
                    "marginBottom": 20,
                  }
                }
              >
                you’re offline
              </YuText>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "you’re offline",
                "style": Object {
                  "fontSize": 70,
                  "marginBottom": 20,
                },
              },
              "ref": null,
              "rendered": "you’re offline",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Check your internet connection.",
            },
            "ref": null,
            "rendered": "Check your internet connection.",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 60,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 500,
          "onPressLeftIcon": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeIndex": 1,
          "hasNotification": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={1}
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />
          </View>,
          <View
            style={
              Object {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View>
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 70,
                    "marginBottom": 20,
                  }
                }
              >
                you’re offline
              </YuText>
            </View>
            <YuText>
              Check your internet connection.
            </YuText>
            <Pad
              height={60}
            />
          </View>,
          <TopBar
            coins={500}
            onPressLeftIcon={[MockFunction]}
          />,
          <NavBar
            activeIndex={1}
            hasNotification={false}
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "height": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Image
              resizeMode="cover"
              source={1}
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />,
            "style": Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "resizeMode": "cover",
              "source": 1,
              "style": Object {
                "height": 1334,
                "width": 750,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View>
                <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 70,
                      "marginBottom": 20,
                    }
                  }
                >
                  you’re offline
                </YuText>
              </View>,
              <YuText>
                Check your internet connection.
              </YuText>,
              <Pad
                height={60}
              />,
            ],
            "style": Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 70,
                      "marginBottom": 20,
                    }
                  }
                >
                  you’re offline
                </YuText>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "you’re offline",
                  "style": Object {
                    "fontSize": 70,
                    "marginBottom": 20,
                  },
                },
                "ref": null,
                "rendered": "you’re offline",
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Check your internet connection.",
              },
              "ref": null,
              "rendered": "Check your internet connection.",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "height": 60,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 500,
            "onPressLeftIcon": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 1,
            "hasNotification": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`QuestsOfflineScreen should render text for unsupported devices 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <QuestsScreenOffline
    fitkitAvailable={false}
    onLeftMenuPress={[MockFunction]}
    theme={
      Object {
        "image": "desert",
        "navBarType": "dark",
      }
    }
    totalCoins={500}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={1}
            style={
              Object {
                "height": 1334,
                "width": 750,
              }
            }
          />
        </View>,
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View>
            <YuText
              bold={true}
              style={
                Object {
                  "fontSize": 70,
                  "marginBottom": 20,
                }
              }
            >
              device not supported
            </YuText>
          </View>
          <YuText>
            your device requires Apple Healthkit in order to use this app.
          </YuText>
          <Pad
            height={60}
          />
        </View>,
        <TopBar
          coins={500}
          onPressLeftIcon={[MockFunction]}
        />,
        <NavBar
          activeIndex={1}
          hasNotification={false}
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "height": "100%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Image
            resizeMode="cover"
            source={1}
            style={
              Object {
                "height": 1334,
                "width": 750,
              }
            }
          />,
          "style": Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "resizeMode": "cover",
            "source": 1,
            "style": Object {
              "height": 1334,
              "width": 750,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View>
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 70,
                    "marginBottom": 20,
                  }
                }
              >
                device not supported
              </YuText>
            </View>,
            <YuText>
              your device requires Apple Healthkit in order to use this app.
            </YuText>,
            <Pad
              height={60}
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 70,
                    "marginBottom": 20,
                  }
                }
              >
                device not supported
              </YuText>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "device not supported",
                "style": Object {
                  "fontSize": 70,
                  "marginBottom": 20,
                },
              },
              "ref": null,
              "rendered": "device not supported",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "your device requires Apple Healthkit in order to use this app.",
            },
            "ref": null,
            "rendered": "your device requires Apple Healthkit in order to use this app.",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 60,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 500,
          "onPressLeftIcon": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeIndex": 1,
          "hasNotification": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={1}
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />
          </View>,
          <View
            style={
              Object {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View>
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 70,
                    "marginBottom": 20,
                  }
                }
              >
                device not supported
              </YuText>
            </View>
            <YuText>
              your device requires Apple Healthkit in order to use this app.
            </YuText>
            <Pad
              height={60}
            />
          </View>,
          <TopBar
            coins={500}
            onPressLeftIcon={[MockFunction]}
          />,
          <NavBar
            activeIndex={1}
            hasNotification={false}
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "height": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Image
              resizeMode="cover"
              source={1}
              style={
                Object {
                  "height": 1334,
                  "width": 750,
                }
              }
            />,
            "style": Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "resizeMode": "cover",
              "source": 1,
              "style": Object {
                "height": 1334,
                "width": 750,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View>
                <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 70,
                      "marginBottom": 20,
                    }
                  }
                >
                  device not supported
                </YuText>
              </View>,
              <YuText>
                your device requires Apple Healthkit in order to use this app.
              </YuText>,
              <Pad
                height={60}
              />,
            ],
            "style": Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 70,
                      "marginBottom": 20,
                    }
                  }
                >
                  device not supported
                </YuText>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "device not supported",
                  "style": Object {
                    "fontSize": 70,
                    "marginBottom": 20,
                  },
                },
                "ref": null,
                "rendered": "device not supported",
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "your device requires Apple Healthkit in order to use this app.",
              },
              "ref": null,
              "rendered": "your device requires Apple Healthkit in order to use this app.",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "height": 60,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 500,
            "onPressLeftIcon": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 1,
            "hasNotification": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
